--- a/Bib/References.bib
+++ b/Bib/References.bib
@@ -478,3 +478,16 @@
   number={5},
   year={2002}
 }
+
+
+@article{dwarakanath_design_2001,
+	title = {Design and development of a {Stewart} platform based force–torque sensor},
+	volume = {11},
+	number = {7},
+	journal = {Mechatronics},
+	author = {Dwarakanath, T. A. and Dasgupta, Bhaskar and Mruthyunjaya, T. S.},
+	year = {2001},
+	note = {Publisher: Elsevier},
+	pages = {793--809},
+	file = {Snapshot:C\:\\Users\\samlo\\Zotero\\storage\\ALFSKXEB\\S0957415800000489.html:text/html},
+}
