--- a/Files/Introduction.tex
+++ b/Files/Introduction.tex
@@ -10,7 +10,7 @@ The Stewart platform can be used in conjunction with wind tunnels for wind tunne
 For this project, the force balance is intended to be built as simple and accessible as possible. Thus, the development of a three-component balance will be considered. Several load measurement devices have to be connected to the main structure in order to measure and obtain the results and so making it fully operational. This project will look to employ electrical load measurement techniques. Strain gauges will be used.
 
 \subsection{Problem Environment}
-Simulation and analysis of scaled models is an important step in the development of aircrafts, vehicles and other machines. Such analysis provides aerodynamic performance data that can be used to inform any modifications or improvements e.g. in aircrafts and vehicles to make them more efficient and safer. One such method that is used to perform aerodynamic performance evaluation is the wind tunnel, which can be low speed or high speed, used in conjunction with sensors for data acquisition by a computer. External or internal six-component force balances are also used. Another such technology that can be used for this purpose is the Stewart platform, which can be used to predict behavior of vehicles and aircrafts in the actual environment.
+Simulation and analysis of scaled models is an important step in the development of aircrafts, vehicles and other machines. Such analysis provides aerodynamic performance data that can be used to inform any modifications or improvements e.g. in aircrafts and vehicles to make them more efficient and safer. One such method that is used to perform aerodynamic performance evaluation is the wind tunnel used in conjunction with sensors for data acquisition by a computer. External or internal six-component force balances are also used. Another such technology that can be used for this purpose is the Stewart platform, which can be used to predict behavior of vehicles and aircrafts in the actual environment.
 
 Whereas the wind tunnel gives very accurate results, it is expensive to build and use. Also, some objects require complex maneuver simulations to imitate the actual movements in air. There is therefore the need for dynamic positioning of objects in the wind tunnel.
 
