--- a/Files/Chapter3.tex
+++ b/Files/Chapter3.tex
@@ -69,8 +69,8 @@ Acceleration of the moving platform is obtained by differentiating the velocity 
 +
 \begin{bmatrix}
 0 & 0 & \dot{\beta}c\beta \\
-0 & \dot{\alpha}s\alpha & -\dot{alpha}c\alpha c\beta + s\alpha \dot{\beta}s\beta \\
-0 & \dot{alpha}c\alpha & -\dot{alpha}s\alpha c\beta - c\alpha \dot{\beta}s\beta
+0 & \dot{\alpha} s\alpha & -\dot{\alpha} c\alpha c\beta + s\alpha \dot{\beta} s\beta \\
+0 & \dot{\alpha}c\alpha & -\dot{\alpha}s\alpha c\beta - c\alpha \dot{\beta}s\beta
 \end{bmatrix}
 \begin{bmatrix}
 \dot{\alpha} \\
