--- a/Bib/References.bib
+++ b/Bib/References.bib
@@ -491,3 +491,14 @@
 	pages = {793--809},
 	file = {Snapshot:C\:\\Users\\samlo\\Zotero\\storage\\ALFSKXEB\\S0957415800000489.html:text/html},
 }
+
+@article{csumnu2017simulation,
+  title={Simulation and PID control of a Stewart platform with linear motor},
+  author={{\c{S}}umnu, Ahmet and G{\"u}zelbey, {\.I}brahim Halil and {\c{C}}akir, Mehmet Veysel},
+  journal={Journal of mechanical science and technology},
+  volume={31},
+  number={1},
+  pages={345--356},
+  year={2017},
+  publisher={Springer}
+}
