--- a/Files/Chapter2.tex
+++ b/Files/Chapter2.tex
@@ -125,8 +125,8 @@ The different kinds of internal balances can be made based on:
 \begin{center}
 	\begin{figure}[!h]
 	\centering
-	\includegraphics{Figures/Fig7}
-	\caption[Internal force balances]{Typical configurations for internal force balances. \textit{Left to right:} Box balance and sting balance.}
+	\includegraphics[width=0.8\linewidth]{Figures/Fig7}
+	\caption[Internal force balances]{Typical configurations for internal force balances. \textit{Left to right:} Box balance and sting balance \cite{ferreira2015design}.}
 	\end{figure}
 \end{center}
 The box balance presents a cubic shape and can either be made of a solid piece of material or from assembled parts. In this configuation, the loads are transferred from the top to the bottom. The sting balance presents a cylindrical shape and the loads are transferred from one end to the other in the longitudinal direction. It can be used to measure forces or torques.
