add image reference'

--- a/Bib/References.bib
+++ b/Bib/References.bib
@@ -491,3 +491,10 @@
 	pages = {793--809},
 	file = {Snapshot:C\:\\Users\\samlo\\Zotero\\storage\\ALFSKXEB\\S0957415800000489.html:text/html},
 }
+
+@misc{viquerat2006continuous,
+  title={A Continuous Wave Doppler Radar System for Collision Avoidance Applications},
+  author={Viquerat, Andrew D},
+  year={2006},
+  publisher={University of Surrey}
+}
