--- a/Files/Chapter3.tex
+++ b/Files/Chapter3.tex
@@ -214,8 +214,8 @@ An important part in wind tunnel measurements is the measure of pressure at spec
 \begin{center}
 \begin{figure}
 \centering
-\includegraphics{Figures/pitot}
-\caption[Pitot-static tube]{Pitot-static tube \cite{noauthor_wind_nodate}}
+\includegraphics[width=0.7\linewidth]{Figures/pitot}
+\caption[Pitot-static tube]{Pitot-static tube \cite{viquerat2006continuous}}
 \end{figure}
 \end{center}
 
