--- a/Bib/References.bib
+++ b/Bib/References.bib
@@ -498,3 +498,14 @@
   year={2006},
   publisher={University of Surrey}
 }
+
+@article{csumnu2017simulation,
+  title={Simulation and PID control of a Stewart platform with linear motor},
+  author={{\c{S}}umnu, Ahmet and G{\"u}zelbey, {\.I}brahim Halil and {\c{C}}akir, Mehmet Veysel},
+  journal={Journal of mechanical science and technology},
+  volume={31},
+  number={1},
+  pages={345--356},
+  year={2017},
+  publisher={Springer}
+}
