--- a/Files/Chapter3.tex
+++ b/Files/Chapter3.tex
@@ -135,6 +135,7 @@ Proportional-integral-derivative (PID) control will be used to control the Stewa
 	\begin{figure}
 	\centering
 	\includegraphics{Figures/Fig13}
+	\caption[PID Controller]{Simple Low-level PID Controller}
 	\end{figure}
 \end{center}
 \subsection{Design of the Force Sensor}
