--- a/Files/Abstract.tex
+++ b/Files/Abstract.tex
@@ -2,6 +2,7 @@
 \begin{itemize}
 \item DAQA - Data Acquisition System
 \item DOF - Degrees of Freedom
+\item ELB - Engineering Laboratory Building
 \item JKUAT - Jomo Kenyatta University of Agriculture and Technology
 \item NASA - National Space Agency
 \item SPI - Serial Peripheral Interface
