--- a/Files/Introduction.tex
+++ b/Files/Introduction.tex
@@ -9,12 +9,12 @@ The Stewart platform can be used in conjunction with wind tunnels for wind tunne
 
 For this project, the force balance is intended to be built as simple and accessible as possible. Thus, the development of a three-component balance will be considered. Several load measurement devices have to be connected to the main structure in order to measure and obtain the results and so making it fully operational. This project will look to employ electrical load measurement techniques. Strain gauges will be used.
 
-\subsection{Problem Environment}
+\subsection{Problem Statement}
 Simulation and analysis of scaled models is an important step in the development of aircrafts, vehicles and other machines. Such analysis provides aerodynamic performance data that can be used to inform any modifications or improvements e.g. in aircrafts and vehicles to make them more efficient and safer. One such method that is used to perform aerodynamic performance evaluation is the wind tunnel used in conjunction with sensors for data acquisition by a computer. External or internal six-component force balances are also used. Another such technology that can be used for this purpose is the Stewart platform, which can be used to predict behavior of vehicles and aircrafts in the actual environment.
 
 Whereas the wind tunnel gives very accurate results, it is expensive to build and use. Also, some objects require complex maneuver simulations to imitate the actual movements in air. There is therefore the need for dynamic positioning of objects in the wind tunnel.
 
-\subsection{Problem Statement}This project proposal presents the development of a 3-component external force moment-balance to stand as a simple and economical alternative to the existing commercial solutions. The force balance should be able to measure lift, drag and pitching moment in small models and will be used with a generic low speed wind tunnel which is already available. The proposal also presents the design of a six-degrees-of-freedom Stewart platform to simulate the different movements of objects.
+This project proposal presents the development of a 3-component external force moment-balance to stand as a simple and economical alternative to the existing commercial solutions. The force balance should be able to measure lift, drag and pitching moment in small models and will be used with a generic low speed wind tunnel which is already available. The proposal also presents the design of a six-degrees-of-freedom Stewart platform to simulate the different movements of objects.
 \subsection{Objectives}
 \subsubsection{Main Objective}
 \paragraph{} To develop an external Stewart platform force balance for a low speed wind tunnel. 
@@ -26,4 +26,4 @@ Whereas the wind tunnel gives very accurate results, it is expensive to build an
 \item To develop a Human-Machine Interface for measurement readings and control of the Stewart platform load balance.
 \end{enumerate}
 \subsection{Justification of the study}
-In a large percentage of cases the measurement of forces and moment experience by a model during wind tunnel testing is critical. To achieve this in a cost sustainable way as well as well as allowing the dynamic positioning of model for different test cases is important for development of aerodynamic bodies and parts. In many cases where both these goals are achieved it results in expensive and har to maintain devices or integrated wind tunnels. Our project will be going into the development of a six-degrees-of-freedom Stewart Platform and three-component Force balance. We will use the low speed wind tunnel that is currently available at the fluids laboratory.
+In a large percentage of cases, the measurement of forces and moments experienced by a model during wind tunnel testing is critical. To achieve this in a cost sustainable way while allowing the dynamic positioning of model for different test cases is important for development of aerodynamic bodies and parts. In many cases where both these goals are achieved it results in expensive and hard to maintain devices or integrated wind tunnels. Our project will be going into the development of a six-degrees-of-freedom Stewart Platform and three-component Force balance. We will use the low speed wind tunnel that is currently available at the fluids laboratory at ELB in JKUAT.
