--- a/Files/Chapter4.tex
+++ b/Files/Chapter4.tex
@@ -6,7 +6,7 @@
 \item A human Machine Interface with access to control  of the stewaart platform electronics and data aquisition from sensors.
 \end{enumerate}
 \newpage
-\section{Proposed Budget}
+\subsection{Proposed Budget}
 \begin{center}
 \begin{table}[!h]
 \centering
@@ -14,7 +14,7 @@
 \caption{Proposed budget}
 \end{table}
 \end{center}
-\section{Work Plan}
+\subsection{Work Plan}
 \begin{center}
 \begin{table}[!h]
 \centering
