--- a/Files/Chapter4.tex
+++ b/Files/Chapter4.tex
@@ -10,15 +10,17 @@
 \begin{center}
 \begin{table}[!h]
 \centering
-\includegraphics{Figures/budget}
 \caption{Proposed budget}
+\paragraph{ }
+\includegraphics{Figures/budget}
 \end{table}
 \end{center}
 \subsection{Work Plan}
 \begin{center}
 \begin{table}[!h]
 \centering
-\includegraphics[width=0.95\linewidth]{Figures/workplan}
 \caption{Workplan table}
+\paragraph{ }
+\includegraphics[width=0.95\linewidth]{Figures/workplan}
 \end{table}
 \end{center}
