--- a/Files/Introduction.tex
+++ b/Files/Introduction.tex
@@ -22,8 +22,8 @@ Whereas the wind tunnel gives very accurate results, it is expensive to build an
 \begin{enumerate}
 \item To design and fabricate a six-degrees-of-freedom Stewart platform.
 \item To develop a force balance for the Stewart platform and obtain forces and moments during model testing.
-\item To improve flow velocity measurement at the wind tunnel.
+\item To measure flow velocity measurements in the wind tunnel by use of a pitot tube.
 \item To develop a Human-Machine Interface for measurement readings and control of the Stewart platform load balance.
 \end{enumerate}
 \subsection{Justification of the study}
-In a large percentage of cases the measurement of forces and moment experience by a model during wind tunnel testing is critical. To achieve this in a cost sustainable way as well as well as allowing the dynamic positioning of model for different test cases is important for development of aerodynamic bodies and parts. In many cases where both these goals are achieved it results in expensive and har to maintain devices or integrated wind tunnels. Our project will be going into the development of a six-degrees-of-freedom Stewart Platform and three-component Force balance. We will use the low speed wind tunnel that is currently available at the fluids laboratory.
+In a large percentage of cases the measurement of forces and moment experience by a model during wind tunnel testing is critical. To achieve this in a cost sustainable way as well as allowing the dynamic positioning of model for different test cases is important for development of aerodynamic bodies and parts. In many cases where both these goals are achieved it results in expensive and hard to maintain devices or integrated wind tunnels. Our project will be going into the development of a six-degrees-of-freedom Stewart Platform and three-component Force balance. We will use the low speed wind tunnel that is currently available at the JKUAT fluids laboratory.
