--- a/Files/Chapter3.tex
+++ b/Files/Chapter3.tex
@@ -135,9 +135,9 @@ The controller will consist of two sections:
 \end{equation}
 where R is the rotation matrix relating the top plate orientation with respect to the bottom plate, $P_{t,i}$ is the attachment point of leg i in the top plate with respect to the top plate coordinate system, P is the position of the top plate with respect to the bottom plate, $P_{b,i}$ is the attachment point of leg i in the bottom plate with respect to the bottom plate coordinate system, and $ln,i$ is the nominal length of leg i. 
 
-Proportional-integral-derivative (PID) control will be used to control the Stewart platform. A dynamic model of the system will be implemented in MatLab/Simulink.
+Proportional-integral-derivative (PID) control will be used to control the Stewart platform. A dynamic model of the system, such as the one shown in figure 3.2, will be implemented in MatLab/Simulink.
 \begin{center}
-	\begin{figure}
+	\begin{figure}[!h]
 	\centering
 	\includegraphics{Figures/Fig13}
 	\caption[PID Controller]{Simple Low-level PID Controller}
