--- a/Files/Chapter3.tex
+++ b/Files/Chapter3.tex
@@ -1,13 +1,13 @@
 \section{Methodology}
 \subsection{Outline}
-This section will look into the mathematical designs for the Stewart platform, considerations for the force sensor and the velocity measurement within the wind tunnel. It will finally looks into the design of a human machine interface that will be used to control the Stewart platform,  obtain the measurements and display results.
+This section will look into the mathematical designs for the Stewart platform, considerations for the force sensor and the velocity measurement within the wind tunnel. It will finally look into the design of a human machine interface that will be used to control the Stewart platform,  obtain the measurements and display results.
 
 \subsection{Design of Stewart Platform}
-This section deals with: design considerations, position, velocity and acceleration analysis of the Stewart platform. Both kinematic analysis and dynamic analysis will be looked at.
+This section deals with: design considerations, position, velocity and acceleration analysis of the Stewart platform.
 \subsubsection{Design Considerations}
 \begin{enumerate}
 \item When the controllable axes are active, the platform must be controlled in six degrees of motion.
-\item When the controllable members are stationary the
+\item When the controllable members are stationary, the
 platform must have a corresponding fixed position.
 \item The design parameters for consideration are: mobile platform radius, height of the platform and angle between adjacent joints of mobile platform and base plate.
 \item The mechanism should be lightweight.
@@ -225,7 +225,7 @@ An important part in wind tunnel measurements is the measure of pressure at spec
 \end{center}
 The equation relates the speed of the fluid at a point to both the mass density of the fluid and the pressures at the same point in the flow field. For steady flow of an incompressible fluid for which viscosity can be neglected, the fundamental equation has the form:
 
-$$ v = \sqrt{\frac{2(P_0 - P)}{\rho}}$$
+$$ v = \sqrt{\frac{2(P_{0} - P)}{\rho}}$$
 
 Where V is the speed of the fluid, P0 is the total, also called the stagnation, pressure at that point of measurement, and p is the static pressure at the same point.
 
