--- a/Files/Chapter4.tex
+++ b/Files/Chapter4.tex
@@ -1,12 +1,12 @@
 \section{Expected Outcomes}
 \begin{enumerate}
-\item A fuctional stewart platform with six degrees of freedom postioning of a model within a wind tunnel.
-\item A functional force sensor for measuring the aerodynamic load applied on a model and calculate aerodynamic coefficients from the meaurements taken.
+\item A functional Stewart platform with six degrees of freedom that positions a model within a wind tunnel.
+\item A functional force sensor for measuring the aerodynamic loads applied on a model and for calculating aerodynamic coefficients from the measurements taken.
 \item An improved velocity measurement system for the wind tunnel using pitot tubes.
-\item A human Machine Interface with access to control  of the stewaart platform electronics and data aquisition from sensors.
+\item A human Machine Interface with access to control  of the Stewart platform electronics and data acquisition from sensors.
 \end{enumerate}
 \newpage
-\subsection{Proposed Budget}
+\section{Proposed Budget}
 \begin{center}
 \begin{table}[!h]
 \centering
@@ -15,7 +15,7 @@
 \includegraphics{Figures/budget}
 \end{table}
 \end{center}
-\subsection{Work Plan}
+\section{Work Plan}
 \begin{center}
 \begin{table}[!h]
 \centering
