Updated title page

--- a/interim-report/Main_file.tex
+++ b/interim-report/Main_file.tex
@@ -95,15 +95,23 @@
     ------------------------------------------------------------------------------------------------\\[1.0cm]
     \LARGE{\textbf{Development of a 6 DOF Stewart platform
         Force Balance for a Low Speed Wind Tunnel}}\\[0.6cm]
-    \LARGE{\textbf{Final year proposal (FYP 18-9)
-            }}\\[1.5cm]
+    \LARGE{\textbf{FYP 18-9
+            }}\\
+    \LARGE{\textbf{INTERIM REPORT
+                }}\\[0.6cm]
     %\large{by}\\[0.6cm
 
     \vspace{0.5cm}
     \large{\textbf{Sammy Kerata Oina (ENM221-0089/2017)
             }}\\
      \large{\textbf{Earl Spencer Mogire~(ENM221-0074/2017)
-            }}\\[1.0cm]
+            }}\\[0.6cm]
+    \large{\textbf{Supervisors}}\\
+    \large{Dr. Anthony K. Muchiri
+                }\\
+         \large{Ms. maurine N. Andanje}\\
+    %\large{\textbf{Technologist}}\\
+       % Mr. J. Mbugua\\
 %     \large{\textbf{Supervisors}}\\
 %    \large{Dr.-Ing.~Jackson G. Njiri}\\
 %    \large{Prof. George N. Nyakoe}\\
