--- a/interim-report/Main_file.tex
+++ b/interim-report/Main_file.tex
@@ -125,6 +125,8 @@
 
 \input{Files/Declaration}
 \clearpage
+\input{Files/Abstract}
+\clearpage
 \addcontentsline{toc}{section}{Table of Contents}
 \tableofcontents
 \clearpage
@@ -141,12 +143,11 @@
 \newpage
 \clearpage
 \addcontentsline{toc}{section}{List of Abbreviations}
+\input{Files/Nomenclature}
 \clearpage
 \newpage
 
 \newpage
-\input{Files/Abstract}
-\clearpage
 \pagenumbering{arabic}
   \input{Files/Introduction}
   \clearpage
